--- a/src/Components/Buttons/BigButton.css
+++ b/src/Components/Buttons/BigButton.css
@@ -2,20 +2,29 @@
 	padding: 1em;
 	margin: 0 .5em;
 	cursor: pointer;
-	background-color: #8b0000;
 	color: #fee;
 	font-size: .9em;
 	box-shadow: #411 1px 2px 3px;
 	border: none;
 	outline: none;
-	transition: all .2s;
-	border-radius: 20px;
+	transition: all .3s;
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
 }
 
-.bigButton:hover {
+.dark {
+	background-color: #9c0000;
+}
+
+.light {
 	background-color: #ad0000;
 }
 
+.bigButton:hover {
+	transform: rotate(-10deg);
+}
+
 .bigButton:active {
-	transform: translateY(2px);
+	transform: scale(1.1) rotate(-10deg);
 }
