--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,4 +1,16 @@
 .slider {
-	margin-top: 0;
-	margin-bottom: 25px;
+	display: block;
+	margin: 10px;
+}
+
+.label {
+	margin: 10px;
+	display: block;
+	text-align: center;
+}
+
+.sliderContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
