--- a/src/Components/About/AboutView.css
+++ b/src/Components/About/AboutView.css
@@ -1,6 +1,6 @@
 .aboutView {
-	height: 80vh;
-	width: 50vw;
+	height: 90vh;
+	width: 55vw;
 	z-index: 1;
 	background-color: #070;
 	margin: auto auto;
@@ -8,13 +8,14 @@
 	flex-flow: column wrap;
 	align-items: center;
 	justify-content: space-around;
-	padding: 1em;
+	padding: 1em 3em;
 	box-shadow: #000 1px 1px 5px;
 	border-radius: 10%;
+	font-size: 100%;
 }
 
-p {
-	margin-bottom: 8px;
+.aboutView > p {
+	text-align: justify;
 	-webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -22,4 +23,45 @@ p {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+.aboutView > h2 {
+	margin: 0;
+}
+
+.aboutView > ol {
+	margin: 0;
+}
+
+@media only screen and (max-width: 800px) {
+	.aboutView {
+		font-size: 90%;
+	}
+}
+
+@media only screen and (max-width: 550px) {
+	.aboutView > h2 {
+		font-size: 1.2em;
+	}
+}
+
+@media only screen and (max-width: 450px) {
+	.aboutView {
+		font-size: 85%;
+	}
+
+	.aboutView > h2 {
+		font-size: 1.1em;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.aboutView {
+		font-size: 80%;
+		height: 90vh;
+	}
+
+	.aboutView > h2 {
+		font-size: 1em;
+	}
 }
