--- a/src/Components/Logo/Logo.css
+++ b/src/Components/Logo/Logo.css
@@ -19,3 +19,9 @@ h1 {
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
+@media only screen and (max-width: 400px){
+	h1 {
+		font-size: 1em;
+	}
+}
