--- a/src/Components/Logo/Logo.css
+++ b/src/Components/Logo/Logo.css
@@ -1,27 +1,19 @@
 .logoImage {
-	height: 30px;
-	width: 30px;
-	margin-right: .5em;
-	translate: 0px 5px;
-	margin-bottom: -5px;
+	width: 20em;
 }
 
-h1 {
-	font-size: 1.2em;
+.logoContainer {
+	display: flex;
+	align-items: center;
+	padding: .5em;
 }
 
-.logo {
-	-webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
-}
+@media only screen and (max-width: 500px){
+	.logoImage {
+		max-width: 50vw;
+	}
 
-@media only screen and (max-width: 400px){
-	h1 {
-		font-size: 1em;
+	.logoContainer {
+		padding: 0;
 	}
 }
