Change middle image accordingly to mode & timer's end

--- a/src/Components/Buttons/AcceptButton.css
+++ b/src/Components/Buttons/AcceptButton.css
@@ -5,8 +5,7 @@
 	background-color: #8b0000;
 	color: #fee;
 	font-size: .9em;
-	box-shadow: #411 1px 2px 3px;
-	border: none;
+  border: 1px solid #000;
 	outline: none;
 	transition: all .2s;
 	border-radius: 20px;
