--- a/src/Components/About/AboutView.css
+++ b/src/Components/About/AboutView.css
@@ -9,7 +9,7 @@
 	align-items: center;
 	justify-content: space-around;
 	padding: 1em 3em;
-	box-shadow: #000 1px 1px 5px;
+	border: 1.5px solid black;
 	border-radius: 10%;
 }
 
